@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+November 12, 2001
+	image.tostring() now works with alpha/colorkey
+
 November 3, 2001
         filled shape drawing now clips properly [BUG]
         Rect object correctly compare (==,<,>)
